# oh-my-docker

./: .gitignore  Cargo.toml  README.md  omdocker.scm
.github/actions/build-binary/: action.yml
.github/actions/setup-linux-deps/: action.yml
.github/workflows/: build-platforms.yml  release.yml
src/: config.rs  main.rs  update.rs  util.rs
src/app/: event.rs  mod.rs  mode.rs  reducer.rs  state.rs
src/app/handlers/: container.rs  event.rs  explorer.rs  image.rs  log.rs  mod.rs  navigation.rs  network.rs  statistics.rs  volume.rs
src/app/reducers/: container.rs  event.rs  explorer.rs  image.rs  log.rs  navigation.rs  network.rs  shell.rs  statistics.rs  volume.rs
src/docker/: client.rs  containers.rs  events.rs  explorer.rs  images.rs  logs.rs  mod.rs  networks.rs  statistics.rs  volumes.rs
src/input/: handler.rs  keymap.rs  keys.rs  mod.rs
src/runtime/: tasks.rs
src/search/: fuzzy.rs
src/ui/: column_picker.rs  confirm_dialog.rs  container_details.rs  containers.rs  events.rs  explorer.rs  help.rs  image_run.rs  images.rs  logs.rs  mod.rs  networks.rs  preview.rs  resource_panel.rs  shell.rs  shell_config.rs  statistics.rs  status_bar.rs  tabs_bar.rs  theme.rs  volumes.rs
