[package]
name = "omdocker"
version = "0.7.0"
edition = "2021"
repository = "https://github.com/supertorpe/oh-my-docker"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
fuzzy-matcher = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tar = "0.4"
toml = "0.8"
ureq = { version = "3", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
